[package]
name = "bcrypt-service"
version = "0.1.0"
authors = ["kildrens <5198060+kildrens@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.2"
redis = "0.17"
rocket = "0.4.6"
rand = "0.7.3"
bcrypt = "0.8"

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["json"]